[package]
name = "vdmpf"
version = "0.1.0"
authors = ["myl7 <myl@myl.moe>"]
edition = "2021"
description = "Verifiable distributed multi-point function (DMPF) implementation"
documentation = "https://github.com/myl7/vdmpf#readme"
homepage = "https://github.com/myl7/vdmpf"
repository = "https://github.com/myl7/vdmpf.git"
license = "Apache-2.0"
keywords = ["dmpf", "dpf", "fss", "cryptographic"]
categories = ["cryptography"]

[dependencies]
bitvec = "1.0.1"
