[package]
name = "vdmpf"
version = "0.1.0"
authors = ["myl7 <myl@myl.moe>"]
edition = "2021"
description = "Verifiable distributed multi-point function (DMPF) implementation"
documentation = "https://github.com/myl7/vdmpf#readme"
homepage = "https://github.com/myl7/vdmpf"
repository = "https://github.com/myl7/vdmpf.git"
license = "Apache-2.0"
keywords = ["dmpf", "dpf", "fss", "cryptography"]
categories = ["cryptography"]

[dependencies]
bitvec = "1.0.1"

[dev-dependencies]
sha3 = "0.10.6"
rand = "0.8.5"
rand_seeder = "0.2.3"
rand_chacha = "0.3.1"
hex-literal = "0.4.1"
