[package]
name = "vdmpf"
version = "0.1.0"
authors = ["myl7 <myl@myl.moe>"]
edition = "2021"
description = "Verifiable distributed multi-point function (DMPF) implementation"
documentation = "https://github.com/myl7/vdmpf#readme"
homepage = "https://github.com/myl7/vdmpf"
repository = "https://github.com/myl7/vdmpf.git"
license = "Apache-2.0"
keywords = ["dmpf", "dpf", "fss", "cryptography"]
categories = ["cryptography"]

[features]
dyn_utils = [
  "dep:aes",
  "dep:sha3",
  "dep:rand",
  "dep:rand_chacha",
  "dep:rand_seeder",
  "dep:hex-literal",
]

[dependencies]
bitvec = "1.0.1"
statrs = "0.16.0"
num-bigint = "0.4.3"
num-integer = "0.1.45"
anyhow = "1.0.70"
sha3 = { version = "0.10.6", optional = true }
rand = { version = "0.8.5", optional = true }
rand_seeder = { version = "0.2.3", optional = true }
rand_chacha = { version = "0.3.1", optional = true }
aes = { version = "0.8.2", optional = true }
hex-literal = { version = "0.4.1", optional = true }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "dmpf"
harness = false
required-features = ["dyn_utils"]

# For flamegraph
# [profile.bench]
# debug = true
